--- a/app/src/main/res/layout/layout_bank_question_student.xml
+++ b/app/src/main/res/layout/layout_bank_question_student.xml
@@ -79,7 +79,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/black"
-                android:text="0"
+                android:text=""
                 android:fontFamily="sans-serif"
                 android:textSize="12sp"/>
         </LinearLayout>
